--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <a href="top of page"></a><button>Go to Top</button> </a>
 
-
+            <p> Amaya Kothari</p>
         </body>
 
 </html>
