--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>Manuscript</title>
-        <link href="index.css" rel="stylesheet">
+        <link href="styles/index.css" rel="stylesheet">
     </head>
 
         <body>
